@startuml
package "Domain Model" {
    class User {
        - id: UserId
        - name: Name
        - email: Email
        - password: Password
        - address: Address
        - status: Status
        --
        + __repr__(): str
    }

    class UserId {
        - id: int
        --
        + __repr__(): str
    }

    class Name {
        - full_name: str
        --
        + __repr__(): str
    }

    class Email {
        - address: str
        --
        + __repr__(): str
    }

    class Password {
        - plain: str = None
        - hashed: str = None
        --
        + hash(): Password
        + verify(plain: str): Password
    }

    class Address {
        - street: str
        - city: str
        - state: str
        - zip_code: str
        --
        + __repr__(): str
    }

    class Status {
        - status: str
        --
        + enable(): Status
        + disable(): Status
        + is_enabled(): bool
        + __repr__(): str
    }

    User --> UserId
    User --> Name
    User --> Email
    User --> Password
    User --> Address
    User --> Status
}
@enduml